--- a/index.html
+++ b/index.html
@@ -1,29 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <link rel="stylesheet" href="css/main.css">
-  <meta charset="utf-8">
-</head>
-<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-<!-- UIkit CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/css/uikit.min.css" />
 
-<!-- UIkit JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit-icons.min.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<body>
-  <header class="header">
-    <div class="header-left"> </div>
-      <div class="header-nav"> </div>
-        <div class="header-right"> </div>
-  </header>
+  <head>
+    <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/css/uikit.min.css" />
 
-  <main class="main">
+    <!-- UIkit JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit-icons.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <header class="header">
+      <div class="container container-head">
+        <div class="header-left">
+          <a class="logo" href="#"> <img class="logo-img" src="images/icons/logos.svg" alt="image"> <span class="logo-name"> Waxom </span> </a>
+        </div>
+        <div class="header-nav">
+          <ul class="nav-items">
+            <li><a class="home-nav"> Home </a> </li>
+            <li><a class="nav-item"> About us</a> </li>
+            <li><a class="nav-item"> Potfolio </a> </li>
+            <li><a class="nav-item"> Features</a> </li>
+            <li><a class="nav-item"> Blog</a> </li>
+            <li><a class="nav-item"> Pricing</a> </li>
+            <li><a class="nav-item"> Shortcodes</a> </li>
+            <li><a class="nav-item"> Contact</a> </li>
+          </ul>
+        </div>
+        <div class="header-right">
+          <ul class="header-icons">
+            <li> <a class="icon-link"><img class="header-icon" src="images/icons/icon-cart.svg" alt="image"></a> </li>
+            <li> <a class="icon-link"><img class="header-icon" src="images/icons/icon-search.svg" alt="image"></a> </li>
+          </ul>
+        </div>
+      </div>
+      <section class="hero">
+        <div class="hero-background"> <img class="hero-img" src="images/hero.png" alt="image"></div>
+        <div class="container">
+          <div class="hero-foreground">
+            <p class="hero-under-title"> Unique and Modern Design </p>
+            <h1 class="hero-title"> Portfolio PSD Template </h1>
+            <p class="hero-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imper<br>diet doming id quod mazim placerat facer possim assum.
+            </p>
+
+          </div>
+        </div>
+      </section>
+    </header>
+
+    <main class="main">
 
 
-  </main>
-  <footer class="footer"></footer>
-</body>
+    </main>
+    <footer class="footer"></footer>
+  </body>
+
 </html>
