create some cards and problems with card-decoration, and problems whith menu width

--- a/index.html
+++ b/index.html
@@ -101,7 +101,37 @@
     </header>
 
     <main class="main">
-
+<section class="section-a">
+  <div class="card s-a">
+    <div class="card-image"><img class="card-icon" src="images/icons/pencil.svg" alt=""> </div>
+    <div class="card-body"> </div>
+    <div class="card-title"><a class="card-link"> Web & App Design</a></div>
+    <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+    </p>
+ </div>
+ <div class="card s-a">
+   <div class="card-image"> <img class="card-icon" src="images/icons/pencil.svg" alt=""></div>
+   <div class="card-body"> </div>
+   <div class="card-title"><a class="card-link"> Development </a></div>
+   <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+   </p>
+</div>
+<div class="card s-a">
+  <div class="card-image"> <img class="card-icon" src="images/icons/pencil.svg" alt=""> </div>
+  <div class="card-body"> </div>
+  <div class="card-title"><a class="card-link"> Customization </a></div>
+  <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congu
+    e nihil imperdiet doming id quod mazim.</p>
+</div>
+<div class="card s-a">
+  <div class="card-image"> <img class="card-icon" src="images/icons/pencil.svg" alt=""> </div>
+  <div class="card-body"> </div>
+  <div class="card-title"><a class="card-link">Marketing </a> </div>
+  <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+  </p>
+  <div class="card-decoration"> </div>
+</div>
+</section>
 
     </main>
     <footer class="footer"></footer>
