--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
       <section class="hero">
         <div class="hero-background"> <img class="hero-img" src="images/hero.png" alt="image"></div>
         <div class="container">
-          <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow>
-
+              <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow>
               <ul class="uk-slideshow-items">
                   <li>
                     <div class="hero-foreground">
@@ -93,49 +92,84 @@
 
               <a class="uk-slidenav-large uk-position-center-left uk-position-small " href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
               <a class="uk-slidenav-large uk-position-center-right uk-position-small " href="#" uk-slidenav-next uk-slideshow-item="next"></a>
-
           </div>
-
-        </div>
-
+      </div>
       </section>
     </header>
 
     <main class="main">
 <section class="section-a">
-  <div class="card s-a">
-    <div class="card-image"><img class="card-icon" src="images/icons/pencil.svg" alt=""> </div>
-    <div class="card-body"> </div>
-    <div class="card-title"><a class="card-link"> Web & App Design</a></div>
-    <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
-    </p>
-    <div class="card-decoration"> </div>
- </div>
- <div class="card s-a">
-   <div class="card-image"> <img class="card-icon" src="images/icons/pencil.svg" alt=""></div>
-   <div class="card-body"> </div>
-   <div class="card-title"><a class="card-link"> Development </a></div>
-   <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
-   </p>
-   <div class="card-decoration"> </div>
-</div>
-<div class="card s-a">
-  <div class="card-image"> <img class="card-icon" src="images/icons/pencil.svg" alt=""> </div>
-  <div class="card-body"> </div>
-  <div class="card-title"><a class="card-link"> Customization </a></div>
-  <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congu
-    e nihil imperdiet doming id quod mazim.</p>
-    <div class="card-decoration"> </div>
-</div>
-<div class="card s-a">
-  <div class="card-image"> <img class="card-icon" src="images/icons/pencil.svg" alt=""> </div>
-  <div class="card-body"> </div>
-  <div class="card-title"><a class="card-link">Marketing </a> </div>
-  <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
-  </p>
-  <div class="card-decoration"></div>
+  <div class="container">
+    <div uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 500" class=" uk-grid-match uk-child-width-expand@s uk-text-center " uk-grid>
+    <div>
+        <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
+          <div class="card-image"><div class="card-icon icon-pencil2"> </div> </div>
+          <div class="card-body"> </div>
+          <div class="card-title"><a class="card-link"> Web & App Design</a></div>
+          <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+          </p>
+          <div class="card-decoration"> </div>
+       </div></div>
+     </div>
+    <div>
+        <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
+          <div class="card-image"> <div class="card-icon icon-stack"> </div></div>
+          <div class="card-body"> </div>
+          <div class="card-title"><a class="card-link"> Development </a></div>
+          <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+          </p>
+          <div class="card-decoration"> </div>
+       </div></div>
+    </div>
+    <div>
+        <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
+          <div class="card-image"> <div class="card-icon icon-cog"> </div> </div>
+          <div class="card-body"> </div>
+          <div class="card-title"><a class="card-link"> Customization </a></div>
+          <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congu
+            e nihil imperdiet doming id quod mazim.</p>
+            <div class="card-decoration"> </div>
+        </div></div>
+    </div>
+
+        <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
+          <div class="card-image"> <div class="card-icon icon-folder-open"> </div> </div>
+          <div class="card-body"> </div>
+          <div class="card-title"><a class="card-link">Marketing </a> </div>
+          <p class="card-description"> Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+          </p>
+          <div class="card-decoration"></div>
+
+        </div></div>
+    </div>
 </div>
 </section>
+<section class="section-b">
+<div class="container">
+  <p class="section-title"> Waxom is Realization of your Ideas </p>
+  <p class="section-description"> Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
+  </p>
+
+<div class="uk-child-width-1-3@m img-inline" uk-grid uk-lightbox="animation: scale">
+    <div>
+        <a class="uk-inline" href="images/browser-left.png" data-caption="Caption 1">
+            <img class="s-b-1" src="images/browser-left.png" alt="">
+        </a>
+    </div>
+    <div>
+        <a class="uk-inline" href="images/browser-center.png" data-caption="Caption 2">
+            <img class="s-b-2" src="images/browser-center.png" alt="">
+        </a>
+    </div>
+    <div>
+        <a class="uk-inline" href="images/browser-right.png" data-caption="Caption 3">
+            <img class="s-b-3" src="images/browser-right.png" alt="">
+        </a>
+    </div>
+</div>
+</div>
+</section>
+
 
     </main>
     <footer class="footer"></footer>
