--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
 <section class="section-b">
 <div class="container">
   <p class="section-title"> Waxom is Realization of your Ideas </p>
-  <p class="section-description"> Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
-  </p>
+  <p class="section-description"> Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
 
 <div class="uk-child-width-1-3@m img-inline" uk-grid uk-lightbox="animation: scale">
     <div>
@@ -169,7 +168,14 @@
 </div>
 </div>
 </section>
-
+<section class="section-c">
+  <div class="container"><p class="section-title brown-theme-title"> <span class="waxom-main-style">Waxom</span> Multipurpose WordPress Theme </p>
+<p class="section-description brown-theme-description"> Don't Forget to Rate the Template. Thanks so much!
+</p> </div></section>
+<section class="section-d">
+  <p class="section-title">Our Latest Projects. </p>
+  <p class="section-description"> Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium. </p>
+</section>
 
     </main>
     <footer class="footer"></footer>
