create new cards

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="card-decoration"> </div>
         </div></div>
     </div>
-
+    <div>
         <div class="uk-card uk-card-default uk-card-body"><div class="card s-a">
           <div class="card-image"> <div class="card-icon icon-folder-open"> </div> </div>
           <div class="card-body"> </div>
@@ -140,7 +140,7 @@
           </p>
           <div class="card-decoration"></div>
 
-        </div></div>
+        </div></div></div>
     </div>
 </div>
 </section>
@@ -173,9 +173,753 @@
 <p class="section-description brown-theme-description"> Don't Forget to Rate the Template. Thanks so much!
 </p> </div></section>
 <section class="section-d">
+  <div class="container">
   <p class="section-title">Our Latest Projects. </p>
   <p class="section-description"> Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium. </p>
+  <ul class="uk-subnav uk-subnav-pill uk-flex-center" uk-switcher="animation: uk-animation-fade">
+      <li><a href="#"> All</a></li>
+      <li><a href="#"> Web Design </a></li>
+      <li><a href="#"> Mobile App</a></li>
+      <li><a href="#"> Illustration </a></li>
+      <li><a href="#"> Photography </a></li>
+  </ul>
+
+  <ul class="uk-switcher uk-margin ">
+    <li>
+      <div class="uk-flex uk-flex-center ">
+    <div class="uk-card uk-card-default uk-card-body "><div class="card">
+      <div class="card-header">
+        <figure class="card-image"> <img class="card-image"src= "images/smart_arm.png"></figure>
+      </div>
+      <div class="card-body">
+        <p class="card-title sd-title">
+          lol
+        </p>
+        <p class="card-description sd-description">
+          kek
+        </p>
+      </div>
+      <div class="dark-cover">
+
+      </div>
+    <div class="cover-img">
+    <ul>
+    <li><a href="#">1</a>
+    </li>
+    <li><a href="#">1</a>
+    </li>
+    </ul>
+    </div>
+    </div></div>
+    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+      <div class="card-header">
+        <figure class="card-image"> <img class="card-image"src="images/sea_mountain.png"></figure>
+      </div>
+      <div class="card-body">
+        <p class="card-title sd-title">
+          lol
+        </p>
+        <p class="card-description sd-description">
+          kek
+        </p>
+      </div>
+      <div class="dark-cover">
+
+      </div>
+    <div class="cover-img">
+    <ul>
+    <li><a href="#">1</a>
+    </li>
+    <li><a href="#">1</a>
+    </li>
+    </ul>
+    </div>
+    </div></div>
+    <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+      <div class="card-header">
+        <figure class="card-image"> <img class="card-image"src="images/text_book.png"></figure>
+      </div>
+      <div class="card-body">
+        <p class="card-title sd-title">
+          lol
+        </p>
+        <p class="card-description sd-description">
+          kek
+        </p>
+      </div>
+      <div class="dark-cover">
+
+      </div>
+    <div class="cover-img">
+    <ul>
+    <li><a href="#">1</a>
+    </li>
+    <li><a href="#">1</a>
+    </li>
+    </ul>
+    </div>
+    </div></div>
+    <div class="uk-card uk-card-default uk-card-body"><div class="card">
+      <div class="card-header">
+        <figure class="card-image"> <img class="card-image"src="images/birds.png"></figure>
+      </div>
+      <div class="card-body">
+        <p class="card-title sd-title">
+          lol
+        </p>
+        <p class="card-description sd-description">
+          kek
+        </p>
+      </div>
+      <div class="dark-cover">
+
+      </div>
+    <div class="cover-img">
+    <ul>
+    <li><a href="#">1</a>
+    </li>
+    <li><a href="#">1</a>
+    </li>
+    </ul>
+    </div>
+    </div></div>
+    <div class="uk-card uk-card-default uk-card-body"><div class="card">
+      <div class="card-header">
+        <figure class="card-image"> <img class="card-image"src="images/book_open.png"></figure>
+      </div>
+      <div class="card-body">
+        <p class="card-title sd-title">
+          lol
+        </p>
+        <p class="card-description sd-description">
+          kek
+        </p>
+      </div>
+      <div class="dark-cover">
+
+      </div>
+    <div class="cover-img">
+    <ul>
+    <li><a href="#">1</a>
+    </li>
+    <li><a href="#">1</a>
+    </li>
+    </ul>
+    </div>
+    </div></div>
+    <div class="uk-card uk-card-default uk-card-body"><div class="card">
+      <div class="card-header">
+        <figure class="card-image"> <img class="card-image"src="images/sea_mountain2.png"></figure>
+      </div>
+      <div class="card-body">
+        <p class="card-title sd-title">
+          lol
+        </p>
+        <p class="card-description sd-description">
+          kek
+        </p>
+      </div>
+      <div class="dark-cover">
+
+      </div>
+    <div class="cover-img">
+    <ul>
+    <li><a href="#">1</a>
+    </li>
+    <li><a href="#">1</a>
+    </li>
+    </ul>
+    </div>
+    </div></div>
+</div>
+</li>
+    <li> <div class="uk-flex uk-flex-center ">
+  <div class="uk-card uk-card-default uk-card-body "><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+</div></li>
+    <li><div class="uk-flex uk-flex-center ">
+  <div class="uk-card uk-card-default uk-card-body "><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+</div></li>
+    <li><div class="uk-flex uk-flex-center ">
+  <div class="uk-card uk-card-default uk-card-body "><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="images/smart_arm.png"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+</div></li>
+    <li><div class="uk-flex uk-flex-center ">
+  <div class="uk-card uk-card-default uk-card-body "><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="https://i.pinimg.com/originals/18/6b/d2/186bd27aec856f02b5b92867ce0164ab.jpg"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="https://i.pinimg.com/originals/18/6b/d2/186bd27aec856f02b5b92867ce0164ab.jpg"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body uk-margin-left"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="https://i.pinimg.com/originals/18/6b/d2/186bd27aec856f02b5b92867ce0164ab.jpg"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="https://i.pinimg.com/originals/18/6b/d2/186bd27aec856f02b5b92867ce0164ab.jpg"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="https://i.pinimg.com/originals/18/6b/d2/186bd27aec856f02b5b92867ce0164ab.jpg"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+  <div class="uk-card uk-card-default uk-card-body"><div class="card">
+    <div class="card-header">
+      <figure class="card-image"> <img class="card-image"src="https://i.pinimg.com/originals/18/6b/d2/186bd27aec856f02b5b92867ce0164ab.jpg"></figure>
+    </div>
+    <div class="card-body">
+      <p class="card-title sd-title">
+        lol
+      </p>
+      <p class="card-description sd-description">
+        kek
+      </p>
+    </div>
+    <div class="dark-cover">
+
+    </div>
+  <div class="cover-img">
+  <ul>
+  <li><a href="#">1</a>
+  </li>
+  <li><a href="#">1</a>
+  </li>
+  </ul>
+  </div>
+  </div></div>
+</div></li>
+</ul>
 </section>
+
 
     </main>
     <footer class="footer"></footer>
